SVG blur filter applied to inline element only blurs first line
Categories
(Core :: Graphics: WebRender, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox122 | --- | wontfix |
firefox123 | --- | fixed |
firefox124 | --- | fixed |
People
(Reporter: tyler, Assigned: longsonr)
References
(Regression)
Details
(Keywords: nightly-community, regression)
Attachments
(2 files)
241.77 KB,
image/png
|
Details | |
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:121.0) Gecko/20100101 Firefox/121.0
Steps to reproduce:
The website Grouvee uses a "spoiler" tag to blur potential spoilers. The filter used is an inlined SVG feGuassianBlur filter.
In earlier versions of Firefox and current versions of Chrome and Edge, this applies to the entirety of the text. But as of Firefox 121 (possibly earlier) it only applies to the first line.
This is visible here as of this writing (may be updated soon to use a simpler blur
filter): https://www.grouvee.com/user/PyramidHeadcrab/reviews/3559954/
And I've created a simplified test case here in case the above example is updated: https://codepen.io/tylersticka/pen/bGZRaOQ/7f124f41e429d555a1efd120e53ba0e9
Actual results:
Only the first line of the element has the filter applied.
Expected results:
The entire element should be blurred.
Comment 1•2 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Graphics: WebRender' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
![]() |
||
Comment 2•2 years ago
|
||
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=7cc8baac415ebcf55e5bfe27795610c8f53bbbad&tochange=4b3dda4d2972331b75c2f18e2cda51b39c1c89a4
Comment 3•2 years ago
|
||
:jwatt, since you are the author of the regressor, bug 1494263, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
Assignee | ||
Comment 4•2 years ago
|
||
Updated•2 years ago
|
Assignee | ||
Updated•2 years ago
|
Assignee | ||
Comment 5•2 years ago
|
||
Comment 8•2 years ago
|
||
bugherder |
Assignee | ||
Comment 10•2 years ago
|
||
Comment on attachment 9375759 [details]
Bug 1875707 - Fix webrender filters when applied to continuation or split frames r=emilio
Beta/Release Uplift Approval Request
- User impact if declined: some SVG filters on HTML content will have the wrong bounds, or perhaps not apply at all.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): small patch, code change is similar to other places.
- String changes made/needed: none
- Is Android affected?: Yes
Comment 11•2 years ago
|
||
Comment on attachment 9375759 [details]
Bug 1875707 - Fix webrender filters when applied to continuation or split frames r=emilio
Approved for 123 beta 2, thanks.
Comment 12•2 years ago
|
||
uplift |
Comment 13•2 years ago
|
||
bugherder uplift |
Description
•