Bug 1875707 - Fix webrender filters when applied to continuation or split frames r=emilio  a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D199218